# adk_crash_course

./: README.md  main.py  pyproject.toml
1-basic-agent/greeting_agent/: agent.py
2-tool-agent/tool-agent/: agent.py
3-litellm-agent/dad_joke_agent/: .env  agent.py
4-structured-outputs/email_agent/: agent.py
5-sessions-and-state/: basic_stateful_session.py
6-persistent-storage/: .env  main.py  utils.py
6-persistent-storage/pizza_order_agent/: agent.py
